--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <thead>
           <tr>
             <th ng-click="orderBy('name')">Nombre</th>
-            <th ng-click="orderBy('country')">Apellido</th>
+            <th ng-click="orderBy('country')">Ciudad</th>
             <th ng-click="orderBy('salary')">Salario</th>
             <th ng-click="orderBy('email')">Correo</th>
             <th></th>
@@ -62,9 +62,9 @@
             <div class="form-alert alert alert-danger" ng-show="userForm.name.$invalid &amp;&amp; userForm.name.$touched">Por favor ingrese nombre</div>
           </div>
           <div class="form-group">
-            <label for="country">Apellido</label>
+            <label for="country">Ciudad</label>
             <input class="form-control" id="editCounty" type="text" name="country" ng-model="crudFormCountry" placeholder="Edit country" required="required"/>
-            <div class="form-alert alert alert-danger" ng-show="userForm.country.$invalid &amp;&amp; userForm.country.$touched">Por favor ingrese Apelllido</div>
+            <div class="form-alert alert alert-danger" ng-show="userForm.country.$invalid &amp;&amp; userForm.country.$touched">Por favor ingrese Ciudad</div>
           </div>
           <div class="form-group">
             <label for="salary">Salario</label>
